# vk_bot

./: .gitignore  LICENSE  README.md  conftest.py  main.py  pyproject.toml
core/: main.py
core/DataBase/: DataBase.py  User.py
core/Database/: Database.py
core/EventHandler/: EventHandler.py
core/Keyboard/: Keyboard.py
core/Keyboards/: AllTopicKeyBoard.py  InitKeyboard.py  Keyboard.py
core/Logging/: LoggingConfiguration.py
core/MessageBroker/: MessageBroker.py
core/Messages/ButtonMessage/: ButtonMessage.py
core/Messages/Test/: QAPair.py  Test.py  Topic.py
core/TestHandler/: Test.py
notebooks/: Мальцев_Никита_Task03_АНАЛИЗ.ipynb
tests/: test_Database.py  test_EventHandler.py  test_Keyboard.py  test_MessageBroker.py
